minio/deployment-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: minio
  name: minio-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2025-03-12T18-04-18Z
          args:
            - server
            - /data
          ports:
            - containerPort: 9000
              protocol: TCP
              name: web
          volumeMounts:
            - name: home
              mountPath: /data
            - name: config
              mountPath: /root/.minio
      volumes:
        - name: home
          persistentVolumeClaim:
            claimName: minio-home-claim
        - name: config
          persistentVolumeClaim:
            claimName: minio-config-claim
