minio/svc-minio.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: minio
  name: minio
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: web
      port: 9000
      targetPort: 9000
    - name: console
      port: 44645
      targetPort: 44645
